[gd_scene load_steps=21 format=3 uid="uid://cifr7f5pbfxlo"]

[ext_resource type="Texture2D" uid="uid://28oajk16a6v6" path="res://assets/backgrounds/gamescreen.png" id="1_2nkfn"]
[ext_resource type="Script" path="res://LevelDesigner/index.gd" id="1_5rbuh"]
[ext_resource type="Texture2D" uid="uid://bv142d00uvou4" path="res://assets/sprites/gems.png" id="2_j04o7"]
[ext_resource type="Texture2D" uid="uid://df3sdcq35idko" path="res://assets/backgrounds/background3.png" id="4_4mjd2"]
[ext_resource type="Theme" uid="uid://ckiied77ueyj" path="res://candlelight_theme.tres" id="5_15nix"]
[ext_resource type="Texture2D" uid="uid://bwb6qbxp5x718" path="res://assets/keyboard/letter_w.tres" id="6_qyv8p"]
[ext_resource type="Texture2D" uid="uid://bpypmb6kajhjh" path="res://assets/keyboard/letter_a.tres" id="7_gbyaq"]
[ext_resource type="Texture2D" uid="uid://cnedws03cbck2" path="res://assets/keyboard/letter_s.tres" id="8_1lrdm"]
[ext_resource type="Texture2D" uid="uid://cq60c8757qldh" path="res://assets/keyboard/letter_d.tres" id="9_grto1"]
[ext_resource type="Texture2D" uid="uid://bb1mn7ebyioek" path="res://assets/keyboard/letter_r.tres" id="10_d2d6v"]
[ext_resource type="Texture2D" uid="uid://brgyjbw0y2a18" path="res://assets/keyboard/letter_space.tres" id="11_sfckm"]
[ext_resource type="Texture2D" uid="uid://dfvq0ya7jnos1" path="res://assets/keyboard/letter_z.tres" id="12_mcfvn"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_i1jps"]
texture = ExtResource("2_j04o7")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0

[sub_resource type="TileSet" id="TileSet_bfr1o"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_i1jps")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tyyol"]
texture = ExtResource("2_j04o7")
texture_region_size = Vector2i(32, 32)
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
0:0/0 = 0
1:0/0 = 0

[sub_resource type="TileSet" id="TileSet_twrtq"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_tyyol")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_44wvu"]
texture = ExtResource("2_j04o7")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0

[sub_resource type="TileSet" id="TileSet_awens"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_44wvu")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2ydel"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ydpfk"]

[node name="LevelDesigner" type="Node2D"]
script = ExtResource("1_5rbuh")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1344.0
offset_bottom = 672.0
texture = ExtResource("1_2nkfn")
metadata/_edit_lock_ = true

[node name="CheckButton" type="CheckButton" parent="."]
visible = false
offset_left = 32.0
offset_top = 32.0
offset_right = 352.0
offset_bottom = 96.0
theme_override_font_sizes/font_size = 24
text = "Use Random Shapes"

[node name="ShapesControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 80.0
offset_top = 96.0
offset_right = 120.0
offset_bottom = 136.0

[node name="Background" type="TextureRect" parent="ShapesControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.2
anchor_top = -0.2
anchor_right = -0.2
anchor_bottom = -0.2
offset_right = 99.0
offset_bottom = 480.0
texture = ExtResource("4_4mjd2")
expand_mode = 1
stretch_mode = 1

[node name="ShapesTileMap" type="TileMap" parent="ShapesControl"]
scale = Vector2(0.5, 0.5)
tile_set = SubResource("TileSet_bfr1o")
format = 2
layer_0/name = "BACKGROUND_LAYER"
layer_0/tile_data = PackedInt32Array(-1, 262144, 0, 65535, 262144, 0, 131071, 262144, 0, 196607, 262144, 0, 262143, 262144, 0, 327679, 262144, 0, 393215, 262144, 0, 458751, 262144, 0, 524287, 262144, 0, 589823, 262144, 0, 655359, 262144, 0, 720895, 262144, 0, 786431, 262144, 0, 851967, 262144, 0, 917503, 262144, 0, 983039, 262144, 0, 1048575, 262144, 0, 1114111, 262144, 0, 1179647, 262144, 0, 1245183, 262144, 0, 1310719, 262144, 0, 1376255, 262144, 0, 1441791, 262144, 0, 1507327, 262144, 0, -65536, 262144, 0, -65535, 262144, 0, -65534, 262144, 0, -65533, 262144, 0, -65532, 262144, 0, 1572863, 262144, 0, 1638399, 262144, 0, 1703935, 262144, 0, -65531, 262144, 0, 5, 262144, 0, 65541, 262144, 0, 131077, 262144, 0, 196613, 262144, 0, 262149, 262144, 0, 327685, 262144, 0, 393221, 262144, 0, 458757, 262144, 0, 524293, 262144, 0, 589829, 262144, 0, 655365, 262144, 0, 720901, 262144, 0, 786437, 262144, 0, 851973, 262144, 0, 917509, 262144, 0, 983045, 262144, 0, 1048581, 262144, 0, 1114117, 262144, 0, 1179653, 262144, 0, 1245189, 262144, 0, 1310725, 262144, 0, 1376261, 262144, 0, 1441797, 262144, 0, 1507333, 262144, 0, 1572869, 262144, 0, 1638405, 262144, 0, 1769471, 262144, 0, 1835007, 262144, 0, 1900543, 262144, 0, 1966079, 262144, 0, 1900544, 262144, 0, 1900545, 262144, 0, 1900546, 262144, 0, 1900547, 262144, 0, 1900548, 262144, 0, 1900549, 262144, 0, 1835013, 262144, 0, 1769477, 262144, 0, 1703941, 262144, 0)
layer_1/name = "SHAPES_LAYER"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array()

[node name="FullQueueControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -352.0
offset_top = -32.0
offset_right = -312.0
offset_bottom = 8.0

[node name="Background" type="TextureRect" parent="FullQueueControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.2
anchor_top = -0.2
anchor_right = -0.2
anchor_bottom = -0.2
offset_left = 574.0
offset_top = 127.0
offset_right = 1122.0
offset_bottom = 607.0
texture = ExtResource("4_4mjd2")
expand_mode = 1
stretch_mode = 1

[node name="FullQueueTileMap" type="TileMap" parent="FullQueueControl"]
position = Vector2(576, 128)
scale = Vector2(0.5, 0.5)
tile_set = SubResource("TileSet_twrtq")
rendering_quadrant_size = 32
format = 2
layer_0/name = "BORDER"
layer_0/tile_data = PackedInt32Array(-1, 262144, 0, 65535, 262144, 0, 131071, 262144, 0, 196607, 262144, 0, 262143, 262144, 0, 327679, 262144, 0, 393215, 262144, 0, 458751, 262144, 0, 524287, 262144, 0, 589823, 262144, 0, 655359, 262144, 0, 720895, 262144, 0, 786431, 262144, 0, 851967, 262144, 0, 917503, 262144, 0, 983039, 262144, 0, 1048575, 262144, 0, 1114111, 262144, 0, 1179647, 262144, 0, 1245183, 262144, 0, 1310719, 262144, 0, 1376255, 262144, 0, 1441791, 262144, 0, 1507327, 262144, 0, 1572863, 262144, 0, 1638399, 262144, 0, 1703935, 262144, 0, 1769471, 262144, 0, 1835007, 262144, 0, 1900543, 262144, 0, 1966079, 262144, 0, -65536, 262144, 0, 1900544, 262144, 0, -65535, 262144, 0, 1900545, 262144, 0, -65534, 262144, 0, 1900546, 262144, 0, -65533, 262144, 0, 1900547, 262144, 0, -65532, 262144, 0, 1900548, 262144, 0, -65531, 262144, 0, 1900549, 262144, 0, -65530, 262144, 0, 1900550, 262144, 0, -65529, 262144, 0, 1900551, 262144, 0, -65528, 262144, 0, 1900552, 262144, 0, -65527, 262144, 0, 1900553, 262144, 0, -65526, 262144, 0, 1900554, 262144, 0, -65525, 262144, 0, 1900555, 262144, 0, -65524, 262144, 0, 1900556, 262144, 0, -65523, 262144, 0, 1900557, 262144, 0, -65522, 262144, 0, 1900558, 262144, 0, -65521, 262144, 0, 1900559, 262144, 0, -65520, 262144, 0, 1900560, 262144, 0, -65519, 262144, 0, 1900561, 262144, 0, -65518, 262144, 0, 1900562, 262144, 0, -65517, 262144, 0, 1900563, 262144, 0, -65516, 262144, 0, 1900564, 262144, 0, -65515, 262144, 0, 1900565, 262144, 0, -65514, 262144, 0, 1900566, 262144, 0, -65513, 262144, 0, 1900567, 262144, 0, -65512, 262144, 0, 1900568, 262144, 0, -65511, 262144, 0, 1900569, 262144, 0, -65510, 262144, 0, 1900570, 262144, 0, -65509, 262144, 0, 1900571, 262144, 0, -65508, 262144, 0, 1900572, 262144, 0, -65507, 262144, 0, 1900573, 262144, 0, -65506, 262144, 0, 1900574, 262144, 0, -65505, 262144, 0, 1900575, 262144, 0, -65504, 262144, 0, 1900576, 262144, 0, 1900577, 262144, 0, 1835041, 262144, 0, 1769505, 262144, 0, 1703969, 262144, 0, 1638433, 262144, 0, 1572897, 262144, 0, 1507361, 262144, 0, 1441825, 262144, 0, 1376289, 262144, 0, 1310753, 262144, 0, 1245217, 262144, 0, 1179681, 262144, 0, 1114145, 262144, 0, 1048609, 262144, 0, 983073, 262144, 0, 917537, 262144, 0, 852001, 262144, 0, 786465, 262144, 0, 720929, 262144, 0, 655393, 262144, 0, 589857, 262144, 0, 524321, 262144, 0, 458785, 262144, 0, 393249, 262144, 0, 327713, 262144, 0, 262177, 262144, 0, 196641, 262144, 0, 131105, 262144, 0, 65569, 262144, 0, 33, 262144, 0, -65503, 262144, 0)
layer_1/name = "QUEUE"
layer_1/tile_data = PackedInt32Array()

[node name="Label" type="Label" parent="FullQueueControl/FullQueueTileMap"]
offset_left = -32.0
offset_top = -64.0
offset_right = 224.0
offset_bottom = -41.0
text = "Full Queue"
horizontal_alignment = 1

[node name="TargetGemControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -64.0
offset_top = -32.0
offset_right = -24.0
offset_bottom = 8.0

[node name="Background" type="TextureRect" parent="TargetGemControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.2
anchor_top = -0.2
anchor_right = -0.2
anchor_bottom = -0.2
offset_left = 864.0
offset_top = 128.0
offset_right = 976.0
offset_bottom = 240.0
texture = ExtResource("4_4mjd2")
expand_mode = 1
stretch_mode = 1

[node name="TargetGemTileMap" type="TileMap" parent="TargetGemControl"]
position = Vector2(864, 128)
scale = Vector2(0.5, 0.5)
tile_set = SubResource("TileSet_awens")
format = 2
layer_0/name = "BORDER"
layer_0/tile_data = PackedInt32Array(-1, 262144, 0, 131071, 262144, 0, 196607, 262144, 0, 262143, 262144, 0, 327679, 262144, 0, 393215, 262144, 0, 458751, 262144, 0, 393216, 262144, 0, 393217, 262144, 0, 393218, 262144, 0, 393219, 262144, 0, 393220, 262144, 0, 393221, 262144, 0, 393222, 262144, 0, -65530, 262144, 0, 6, 262144, 0, 65542, 262144, 0, 131078, 262144, 0, 196614, 262144, 0, 262150, 262144, 0, 327686, 262144, 0, -65536, 262144, 0, -65535, 262144, 0, -65534, 262144, 0, -65533, 262144, 0, -65532, 262144, 0, -65531, 262144, 0, 65535, 262144, 0)
layer_1/name = "PLACED_PIECES"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array()
layer_2/name = "CURRENT_PIECE"
layer_2/z_index = 2
layer_2/tile_data = PackedInt32Array()

[node name="ButtonsControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="TextureRect" parent="ButtonsControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.2
anchor_top = -0.2
anchor_right = -0.2
anchor_bottom = -0.2
offset_left = 792.0
offset_top = 232.0
offset_right = 1032.0
offset_bottom = 344.0
texture = ExtResource("4_4mjd2")
expand_mode = 1
stretch_mode = 1

[node name="TestPlayButton" type="Button" parent="ButtonsControl"]
layout_mode = 0
offset_left = 832.0
offset_top = 264.0
offset_right = 977.0
offset_bottom = 305.0
theme = ExtResource("5_15nix")
text = "Test Play
"

[node name="PauseMenuContainer" type="Control" parent="."]
visible = false
z_index = 999
layout_mode = 3
anchors_preset = 0
offset_left = 576.0
offset_top = 324.0
offset_right = 616.0
offset_bottom = 364.0

[node name="ColorRect" type="ColorRect" parent="PauseMenuContainer"]
modulate = Color(0.0470588, 0.0901961, 0.0196078, 0.580392)
layout_mode = 0
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0

[node name="PanelContainer" type="PanelContainer" parent="PauseMenuContainer"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -31.0
offset_right = 50.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_2ydel")

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenuContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 200
alignment = 1

[node name="ControlsContainer" type="VBoxContainer" parent="PauseMenuContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ResumeButton" type="Button" parent="PauseMenuContainer/PanelContainer/HBoxContainer/ControlsContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../MainMenuButton")
theme = ExtResource("5_15nix")
text = "Resume"

[node name="MainMenuButton" type="Button" parent="PauseMenuContainer/PanelContainer/HBoxContainer/ControlsContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../ResumeButton")
theme = ExtResource("5_15nix")
text = "Main Menu"

[node name="PanelContainer" type="PanelContainer" parent="PauseMenuContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ydpfk")

[node name="VBoxContainer2" type="VBoxContainer" parent="PauseMenuContainer/PanelContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="0_Move" type="HBoxContainer" parent="PauseMenuContainer/PanelContainer/HBoxContainer/PanelContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="WASD" type="VBoxContainer" parent="PauseMenuContainer/PanelContainer/HBoxContainer/PanelContainer/VBoxContainer2/0_Move"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
alignment = 1

[node name="Row1" type="HBoxContainer" parent="PauseMenuContainer/PanelContainer/HBoxContainer/PanelContainer/VBoxContainer2/0_Move/WASD"]
layout_mode = 2
alignment = 1

[node name="LetterW" type="TextureRect" parent="PauseMenuContainer/PanelContainer/HBoxContainer/PanelContainer/VBoxContainer2/0_Move/WASD/Row1"]
layout_mode = 2
texture = ExtResource("6_qyv8p")
stretch_mode = 3

[node name="Row2" type="HBoxContainer" parent="PauseMenuContainer/PanelContainer/HBoxContainer/PanelContainer/VBoxContainer2/0_Move/WASD"]
layout_mode = 2
alignment = 1

[node name="LetterA" type="TextureRect" parent="PauseMenuContainer/PanelContainer/HBoxContainer/PanelContainer/VBoxContainer2/0_Move/WASD/Row2"]
layout_mode = 2
texture = ExtResource("7_gbyaq")
stretch_mode = 3

[node name="LetterS" type="TextureRect" parent="PauseMenuContainer/PanelContainer/HBoxContainer/PanelContainer/VBoxContainer2/0_Move/WASD/Row2"]
layout_mode = 2
texture = ExtResource("8_1lrdm")
stretch_mode = 3

[node name="LetterD" type="TextureRect" parent="PauseMenuContainer/PanelContainer/HBoxContainer/PanelContainer/VBoxContainer2/0_Move/WASD/Row2"]
layout_mode = 2
texture = ExtResource("9_grto1")
stretch_mode = 3

[node name="Label" type="Label" parent="PauseMenuContainer/PanelContainer/HBoxContainer/PanelContainer/VBoxContainer2/0_Move"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Move"
horizontal_alignment = 1

[node name="0_1_rotate" type="HBoxContainer" parent="PauseMenuContainer/PanelContainer/HBoxContainer/PanelContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="LetterR" type="TextureRect" parent="PauseMenuContainer/PanelContainer/HBoxContainer/PanelContainer/VBoxContainer2/0_1_rotate"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
texture = ExtResource("10_d2d6v")
stretch_mode = 3

[node name="Label2" type="Label" parent="PauseMenuContainer/PanelContainer/HBoxContainer/PanelContainer/VBoxContainer2/0_1_rotate"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Change
Selection"
horizontal_alignment = 1

[node name="1_Place" type="HBoxContainer" parent="PauseMenuContainer/PanelContainer/HBoxContainer/PanelContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="LetterSpace" type="TextureRect" parent="PauseMenuContainer/PanelContainer/HBoxContainer/PanelContainer/VBoxContainer2/1_Place"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
texture = ExtResource("11_sfckm")
stretch_mode = 3

[node name="Label" type="Label" parent="PauseMenuContainer/PanelContainer/HBoxContainer/PanelContainer/VBoxContainer2/1_Place"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Place Piece 
or Gem"
horizontal_alignment = 1

[node name="3_Undo" type="HBoxContainer" parent="PauseMenuContainer/PanelContainer/HBoxContainer/PanelContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="LetterZ" type="TextureRect" parent="PauseMenuContainer/PanelContainer/HBoxContainer/PanelContainer/VBoxContainer2/3_Undo"]
clip_contents = true
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
texture = ExtResource("12_mcfvn")
stretch_mode = 3

[node name="Label" type="Label" parent="PauseMenuContainer/PanelContainer/HBoxContainer/PanelContainer/VBoxContainer2/3_Undo"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Undo "
horizontal_alignment = 1

[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="ButtonsControl/TestPlayButton" to="." method="_on_test_play_button_pressed"]
[connection signal="visibility_changed" from="PauseMenuContainer" to="." method="_on_pause_menu_container_visibility_changed"]
[connection signal="pressed" from="PauseMenuContainer/PanelContainer/HBoxContainer/ControlsContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenuContainer/PanelContainer/HBoxContainer/ControlsContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
